# mini-dhcp

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-0cf5987e279b47ef108233238a1e0f0d7fbb95a218530f3f07123ba8f4545e67.json  query-1c48665824129cc0649959f77e1e114135c461aae0f13916ae6cf7a1a102e0f4.json  query-3377999f91fe4990a3c9b8a4e756a584057621f76700387c77bb4e262f988f3e.json  query-58156d30f3c58584c01106b0e90621c44584eb63f0f923a1aa8e31472f661329.json  query-95b5823bb93e377aa16f034ce7ec7c1c7737b3c20d36efff63134beafc0743da.json  query-9bd43b4ff1a7e04b5c1ba5bbaaf316d306a7301e76ec4bb89e22ee38ca25215b.json  query-b617e61103b0f0cfbb54f2d251b88642431bf6b214873bf82aa61f10a03cb807.json  query-b956acaf5fae340ca8d4f050a8d5825fd77dd03d68ccfec6f5c97bc49178bfce.json  query-ef237748e5a151ae2bdbef06b00a88e03dac1e9f403bef25067fb33d1ba3a77d.json
db/migrations/: 20241120120738_leases_tables.sql
db/queries/: insert-new-lease.sql  mark-ip-declined.sql  release-lease.sql  select-by-ip.sql  update-lease-expiry.sql
src/: db.rs  info.rs  lib.rs  migration.rs
tests/: demo.rs
