[package]
name = "mini-dhcp"
description = "A minimalistic DHCP server"
version = "0.3.2"
license = "MIT"
edition = "2021"
authors = ["Luis Silva <luiscomsnofim@gmail.com>"]

[dependencies]
dhcproto = "0.12.0"
tokio = { version = "1.41.1", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
rand = "0.8.5"
jiff = "0.1.14"
anyhow = "1.0.93"
axum = { version = "0.7.9", features = ["macros"] }
serde = { version = "1.0.215", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
futures = "0.3.31"
tracing = "0.1"
tracing-subscriber = "0.3"
